# aoc2024

./: .gitignore  1.bqn  1.py  1.tinyapl  10.bqn  10.py  11.bqn  12.bqn  12.py  13.bqn  13.py  14.bqn  15.ts  16.py  17.py  18.py  2.bqn  2.tinyapl  22.py  23.py  3.tinyapl  4.bqn  4.ua  5.bqn  5.tinyapl  6.bqn  6.py  7.bqn  7.py  7.tinyapl  8.bqn  9.bqn  9.py  Day3.hs  LICENSE  Main.hs  README.md  aoc2024.cabal
