cabal-version:      3.4
name:               aoc2024
version:            0.1.0.0
synopsis:           aoc 2024 solutions i guess
-- description:
license:            MIT
license-file:       LICENSE
author:             RubenVerg
maintainer:         me@rubenverg.com
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day3
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , megaparsec ^>=9.6.1
                    , time ^>=1.14
    hs-source-dirs:   .
    default-language: GHC2024
